Release v4 (#29)
* I18ned XkcdCmd

* I18ned BotInfoCmd

* Code clean-up

* I18ned ServerInfoCmd

* Update dependencies

* I18ned JokeCmd and ThisDayCmd

* I18ned FeedbackCmd and LinksCmd

* I18ned CounterStrikeCmd

* I18ned Diablo3Cmd

* I18ned FortniteCmd

* I18ned OverwatchCmd

* Adds missing OverwatchCmd translations

* I18ned UserInfoCùd

* ChatCmd: Conserve bots order

* ChatCmd: Adds missing translation

* ThisDayCmd: Fix missing dates

* Minor improvements

* I18n and implement PruneCmd

* Start implementing settings

* Rename BaseCmdGroup to *Group

* Delete PrefixSetting

* Starts implementing settings

* Adds MusicGroup

* More work

* Update

* Code clean-up

* I18ned LyricsCmd

* I18ned MathCmd

* I18ned UrbanCmd

* I18ned WeatherCmd

* Update dependency

* Update translation

* Code clean-up

* I18ned WikipediaCmd

* More work

* Code clean-up

* Fix build

* Progress

* Work

* Change singleton pattern to static class

* Audio listener progress

* ThisDay: Cache value

* Create cache

* ThisDayCmd: Use caching classes

* FortniteCmd: Cache responses for 5 minutes

* Code clean-up

* Improve error logging

* OverwatchCmd: Cache values

* Update translations

* CounterStrikeCmd: Implements cache

* DiabloCmd & DeviantArtCmd: Cache token

* DiabloCmd: Implements cache

* Fix: Follow-up message is not edited on command exception

* Code clean-up

* Guilds collection: Improve monitoring and adds cache

* Update bucket4j

* Context: Fix silent exception

* Context: edit methods fallback to reply

* Small improvements

* Fix: EnableCommandCmd does not work on sub-commands

* AudioLoadResultListener: Localize embed title

* Update translations

* Update PremiumCollection.java

* Make all classes public

* Fix tests

* Remove username from replies

* Small improvements

* Adds ReactionInputs

* TimeUtil#parseTime now check for 