@@ -1,16 +1,15 @@
 package com.shadorc.shadbot.api;
 
 import com.shadorc.shadbot.api.json.dbl.TopGgWebhookResponse;
-import com.shadorc.shadbot.cache.CacheManager;
 import com.shadorc.shadbot.data.Config;
 import com.shadorc.shadbot.data.credential.Credential;
 import com.shadorc.shadbot.data.credential.CredentialManager;
-import com.shadorc.shadbot.db.DatabaseManager;
-import com.shadorc.shadbot.db.users.entity.achievement.Achievement;
+import com.shadorc.shadbot.database.DatabaseManager;
+import com.shadorc.shadbot.database.users.entity.achievement.Achievement;
 import com.shadorc.shadbot.object.ExceptionHandler;
 import com.shadorc.shadbot.object.RequestHelper;
-import com.shadorc.shadbot.utils.LogUtils;
-import com.shadorc.shadbot.utils.NetUtils;
+import com.shadorc.shadbot.utils.LogUtil;
+import com.shadorc.shadbot.utils.NetUtil;
 import discord4j.common.util.Snowflake;
 import discord4j.core.GatewayDiscordClient;
 import io.netty.handler.codec.http.HttpHeaderNames;
@@ -33,7 +32,7 @@ import java.util.stream.IntStream;
 
 public class BotListStats {
 
-    private static final Logger LOGGER = LogUtils.getLogger(BotListStats.class);
+    private static final Logger LOGGER = LogUtil.getLogger(BotListStats.class);
 
     private static final String BOTLIST_DOT_SPACE = "https://botlist.space";
     private static final String BOTS_ONDISCORD_DOT_XYZ = "https://bots.ondiscord.xyz";
@@ -56,8 +55,8 @@ public class BotListStats {
     }
 
     private void setupTopGgWebhook() {
-        final String authorization = CredentialManager.getInstance().get(Credential.TOP_DOT_GG_WEBHOOK_AUTHORIZATION);
-        final String port = CredentialManager.getInstance().get(Credential.TOP_DOT_GG_WEBHOOK_PORT);
+        final String authorization = CredentialManager.get(Credential.TOP_DOT_GG_WEBHOOK_AUTHORIZATION);
+        final String port = CredentialManager.get(Credential.TOP_DOT_GG_WEBHOOK_PORT);
         if (authorization != null && port != null) {
             LOGGER.info("Initializing top.gg WebHook server");
             HttpServer.create()
@@ -69,8 +68,8 @@ public class BotListStats {
                                             .asString()
                                             .doOnNext(content -> LOGGER.debug("Webhook event received: {}", content))
                                             .flatMap(content -> Mono.fromCallable(() ->
-                                                    NetUtils.MAPPER.readValue(content, TopGgWebhookResponse.class)))
-                                            .map(TopGgWebhookResponse::getUserId)
+                                                    NetUtil.MAPPER.readValue(content, TopGgWebhookResponse.class)))
+                                            .map(TopGgWebhookResponse::userId)
                                             .map(Snowflake::of)
                                             .flatMap(DatabaseManager.getUsers()::getDBUser)
                                             .flatMap(dbUser -> dbUser.unlockAchievement(Achievement.VOTER))
@@ -87,7 +86,7 @@ public class BotListStats {
     public Mono<Void> postStats() {
         LOGGER.info("Posting statistics");
         final int shardCount = this.gateway.getGatewayClientGroup().getShardCount();
-        return Mono.just(CacheManager.getInstance().getGuildOwnersCache().count())
+        return this.gateway.getGuilds().count()
                 .flatMap(guildCount -> this.postOnBotlistDotSpace(guildCount)
                         .and(this.postOnBotsOndiscordDotXyz(guildCount))
                         .and(this.postOnDiscordbotlistDotCom(shardCount, guildCount))
@@ -97,7 +96,7 @@ public class BotListStats {
                         .and(this.postOnDiscordextremelistDotXyz(guildCount))
                         .and(this.postOnDiscordBotsDotGg(shardCount, guildCount))
                         .and(this.postOnTopDotGg(shardCount, guildCount)))
-                .doOnSuccess(ignored -> LOGGER.info("Statistics posted"));
+                .doOnSuccess(__ -> LOGGER.info("Statistics posted"));
     }
 
     /**
@@ -106,8 +105,8 @@ public class BotListStats {
     private Mono<String> postOnBotlistDotSpace(long guildCount) {
         final JSONObject content = new JSONObject()
                 .put("server_count", guildCount);
-        final String url = String.format("https://api.botlist.space/v1/bots/%d", this.gateway.getSelfId().asLong());
-        return BotListStats.post(url, CredentialManager.getInstance().get(Credential.BOTLIST_DOT_SPACE_TOKEN), content)
+        final String url = "https://api.botlist.space/v1/bots/%d".formatted(this.gateway.getSelfId().asLong());
+        return BotListStats.post(url, CredentialManager.get(Credential.BOTLIST_DOT_SPACE_TOKEN), content)
                 .onErrorResume(BotListStats.handleError(BOTLIST_DOT_SPACE));
     }
 
@@ -117,8 +116,8 @@ public class BotListStats {
     private Mono<String> postOnBotsOndiscordDotXyz(long guildCount) {
         final JSONObject content = new JSONObject()
                 .put("guildCount", guildCount);
-        final String url = String.format("https://bots.ondiscord.xyz/bot-api/bots/%d/guilds", this.gateway.getSelfId().asLong());
-        return BotListStats.post(url, CredentialManager.getInstance().get(Credential.BOTS_ONDISCORD_DOT_XYZ_TOKEN), content)
+        final String url = "https://bots.ondiscord.xyz/bot-api/bots/%d/guilds".formatted(this.gateway.getSelfId().asLong());
+        return BotListStats.post(url, CredentialManager.get(Credential.BOTS_ONDISCORD_DOT_XYZ_TOKEN), content)
                 .onErrorResume(BotListStats.handleError(BOTS_ONDISCORD_DOT_XYZ));
     }
 
@@ -129,8 +128,8 @@ public class BotListStats {
         final JSONObject content = new JSONObject()
                 .put("serveurs", guildCount)
                 .put("shards", shardCount);
-        final String url = String.format("https://api.wonderbotlist.com/v1/bot/%d", this.gateway.getSelfId().asLong());
-        return BotListStats.post(url, CredentialManager.getInstance().get(Credential.WONDERBOTLIST_DOT_COM_TOKEN), content)
+        final String url = "https://api.wonderbotlist.com/v1/bot/%d".formatted(this.gateway.getSelfId().asLong());
+        return BotListStats.post(url, CredentialManager.get(Credential.WONDERBOTLIST_DOT_COM_TOKEN), content)
                 .onErrorResume(BotListStats.handleError(WONDERBOTLIST_DOT_COM));
     }
 
@@ -140,8 +139,8 @@ public class BotListStats {
     private Mono<String> postOnDiscordDotBoats(long guildCount) {
         final JSONObject content = new JSONObject()
                 .put("server_count", guildCount);
-        final String url = String.format("https://discord.boats/api/bot/%d", this.gateway.getSelfId().asLong());
-        return BotListStats.post(url, CredentialManager.getInstance().get(Credential.DISCORD_DOT_BOATS), content)
+        final String url = "https://discord.boats/api/bot/%d".formatted(this.gateway.getSelfId().asLong());
+        return BotListStats.post(url, CredentialManager.get(Credential.DISCORD_DOT_BOATS), content)
                 .onErrorResume(BotListStats.handleError(DISCORD_DOT_BOATS));
     }
 
@@ -151,8 +150,8 @@ public class BotListStats {
     private Mono<String> postOnDiscordextremelistDotXyz(long guildCount) {
         final JSONObject content = new JSONObject()
                 .put("guildCount", guildCount);
-        final String url = String.format("https://api.discordextremelist.xyz/v2/bot/%d/stats", this.gateway.getSelfId().asLong());
-        return BotListStats.post(url, CredentialManager.getInstance().get(Credential.DISCORDEXTREMELIST_DOT_XYZ), content)
+        final String url = "https://api.discordextremelist.xyz/v2/bot/%d/stats".formatted(this.gateway.getSelfId().asLong());
+        return BotListStats.post(url, CredentialManager.get(Credential.DISCORDEXTREMELIST_DOT_XYZ), content)
                 .onErrorResume(BotListStats.handleError(DISCORDEXTREMELIST_DOT_XYZ));
     }
 
@@ -162,8 +161,8 @@ public class BotListStats {
     private Mono<String> postOnBotsfordiscordDotCom(long guildCount) {
         final JSONObject content = new JSONObject()
                 .put("server_count", guildCount);
-        final String url = String.format("https://botsfordiscord.com/api/bot/%d", this.gateway.getSelfId().asLong());
-        return BotListStats.post(url, CredentialManager.getInstance().get(Credential.BOTSFORDISCORD_DOT_COM), content)
+        final String url = "https://botsfordiscord.com/api/bot/%d".formatted(this.gateway.getSelfId().asLong());
+        return BotListStats.post(url, CredentialManager.get(Credential.BOTSFORDISCORD_DOT_COM), content)
                 .onErrorResume(BotListStats.handleError(BOTSFORDISCORD_DOT_COM));
     }
 
@@ -176,10 +175,10 @@ public class BotListStats {
                     final JSONObject content = new JSONObject()
                             .put("shard_id", shardId)
                             .put("guilds ", guildCount / shardCount);
-                    final String url = String.format("https://discordbotlist.com/api/bots/%d/stats",
-                            this.gateway.getSelfId().asLong());
-                    return BotListStats.post(url, String.format("Bot %s",
-                            CredentialManager.getInstance().get(Credential.DISCORDBOTLIST_DOT_COM_TOKEN)), content);
+                    final String url = "https://discordbotlist.com/api/bots/%d/stats"
+                            .formatted(this.gateway.getSelfId().asLong());
+                    return BotListStats.post(url, "Bot %s"
+                            .formatted(CredentialManager.get(Credential.DISCORDBOTLIST_DOT_COM_TOKEN)), content);
                 })
                 .onErrorResume(BotListStats.handleError(DISCORDBOTLIST_DOT_COM));
     }
@@ -194,8 +193,8 @@ public class BotListStats {
                             .put("shardId", shardId)
                             .put("shardCount", shardCount)
                             .put("guildCount", guildCount / shardCount);
-                    final String url = String.format("https://discord.bots.gg/api/v1/bots/%d/stats", this.gateway.getSelfId().asLong());
-                    return BotListStats.post(url, CredentialManager.getInstance().get(Credential.DISCORD_BOTS_DOT_GG_TOKEN), content);
+                    final String url = "https://discord.bots.gg/api/v1/bots/%d/stats".formatted(this.gateway.getSelfId().asLong());
+                    return BotListStats.post(url, CredentialManager.get(Credential.DISCORD_BOTS_DOT_GG_TOKEN), content);
                 })
                 .onErrorResume(BotListStats.handleError(DISCORD_BOTS_DOT_GG));
     }
@@ -210,8 +209,8 @@ public class BotListStats {
                             .put("shard_id", shardId)
                             .put("shard_count", shardCount)
                             .put("server_count", guildCount / shardCount);
-                    final String url = String.format("https://top.gg/api/bots/%d/stats", this.gateway.getSelfId().asLong());
-                    return BotListStats.post(url, CredentialManager.getInstance().get(Credential.TOP_DOT_GG_TOKEN), content);
+                    final String url = "https://top.gg/api/bots/%d/stats".formatted(this.gateway.getSelfId().asLong());
+                    return BotListStats.post(url, CredentialManager.get(Credential.TOP_DOT_GG_TOKEN), content);
                 })
                 .onErrorResume(BotListStats.handleError(TOP_DOT_GG));
     }
