@@ -8,87 +8,80 @@ import com.shadorc.shadbot.core.command.CommandCategory;
 import com.shadorc.shadbot.core.command.Context;
 import com.shadorc.shadbot.object.Emoji;
 import com.shadorc.shadbot.object.RequestHelper;
-import com.shadorc.shadbot.object.help.CommandHelpBuilder;
-import com.shadorc.shadbot.utils.DiscordUtils;
-import com.shadorc.shadbot.utils.NetUtils;
+import com.shadorc.shadbot.utils.LogUtil;
+import com.shadorc.shadbot.utils.NetUtil;
 import discord4j.common.util.Snowflake;
-import discord4j.core.spec.EmbedCreateSpec;
+import discord4j.rest.util.ApplicationCommandOptionType;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
+import reactor.util.Logger;
 
-import java.util.List;
+import java.io.IOException;
+import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
-import java.util.function.Consumer;
-
-import static com.shadorc.shadbot.Shadbot.DEFAULT_LOGGER;
+import java.util.function.Predicate;
 
 public class ChatCmd extends BaseCmd {
 
+    private static final Logger LOGGER = LogUtil.getLogger(ChatCmd.class, LogUtil.Category.COMMAND);
     private static final String HOME_URl = "https://www.pandorabots.com/pandora/talk-xml";
-    private static final Map<String, String> BOTS = Map.of("Marvin", "efc39100ce34d038",
-            "Chomsky", "b0dafd24ee35a477",
-            "R.I.V.K.A", "ea373c261e3458c6",
-            "Lisa", "b0a6a41a5e345c23");
     private static final int MAX_CHARACTERS = 250;
+    private static final Map<String, String> BOTS = new LinkedHashMap<>(4);
+
+    static {
+        BOTS.put("Marvin", "efc39100ce34d038");
+        BOTS.put("Chomsky", "b0dafd24ee35a477");
+        BOTS.put("R.I.V.K.A", "ea373c261e3458c6");
+        BOTS.put("Lisa", "b0a6a41a5e345c23");
+    }
 
     private final Map<Snowflake, String> channelsCustid;
 
     public ChatCmd() {
-        super(CommandCategory.FUN, List.of("chat"));
-        this.setDefaultRateLimiter();
+        super(CommandCategory.FUN, "chat", "Chat with an artificial intelligence");
+        this.addOption(option -> option.name("message")
+                .description("The message to send, must not exceed %d characters".formatted(MAX_CHARACTERS))
+                .required(true)
+                .type(ApplicationCommandOptionType.STRING.getValue()));
 
         this.channelsCustid = new ConcurrentHashMap<>();
     }
 
     @Override
-    public Mono<Void> execute(Context context) {
-        final String arg = context.requireArg();
-
-        if (arg.length() > MAX_CHARACTERS) {
-            return Mono.error(new CommandException(String.format("The message must not exceed **%d characters**.",
-                    MAX_CHARACTERS)));
+    public Mono<?> execute(Context context) {
+        final String message = context.getOptionAsString("message").orElseThrow();
+        if (message.length() > MAX_CHARACTERS) {
+            return Mono.error(new CommandException(context.localize("chat.max.characters")
+                    .formatted(MAX_CHARACTERS)));
         }
 
-        return this.getResponse(context.getChannelId(), arg)
-                .flatMap(response -> context.getChannel()
-                        .flatMap(channel -> DiscordUtils.sendMessage(Emoji.SPEECH + " " + response, channel)))
-                .then();
+        return this.getResponse(context.getChannelId(), message)
+                .flatMap(response -> context.reply(Emoji.SPEECH, response))
+                .switchIfEmpty(Mono.error(new IOException("Bots are unreachable")));
     }
 
-    private Mono<String> getResponse(Snowflake channelId, String input) {
+    private Mono<String> getResponse(Snowflake channelId, String message) {
         return Flux.fromIterable(BOTS.entrySet())
-                .flatMap(bot -> Mono.defer(() -> this.talk(channelId, bot.getValue(), input)
-                        .map(response -> String.format("**%s**: %s", bot.getKey(), response))))
-                .takeUntil(str -> !str.isBlank())
+                .flatMapSequential(bot -> this.talk(channelId, bot.getValue(), message)
+                        .map(response -> "**%s**: %s".formatted(bot.getKey(), response)))
+                .takeUntil(Predicate.not(String::isBlank))
                 .next();
     }
 
-    private Mono<String> talk(Snowflake channelId, String botId, String input) {
-        final String url = String.format("%s?botid=%s&input=%s&custid=%s",
-                HOME_URl, botId, NetUtils.encode(input), this.channelsCustid.getOrDefault(channelId, ""));
+    private Mono<String> talk(Snowflake channelId, String botId, String message) {
+        final String url = "%s?".formatted(HOME_URl)
+                + "botid=%s".formatted(botId)
+                + "&input=%s".formatted(NetUtil.encode(message))
+                + "&custid=%s".formatted(this.channelsCustid.getOrDefault(channelId, ""));
 
         return RequestHelper.fromUrl(url)
                 .to(ChatBotResponse.class)
-                .map(ChatBotResponse::getResult)
-                .doOnNext(chat -> this.channelsCustid.put(channelId, chat.getCustId()))
+                .map(ChatBotResponse::result)
+                .doOnNext(chat -> this.channelsCustid.put(channelId, chat.custid()))
                 .map(ChatBotResult::getResponse)
                 .onErrorResume(err -> Mono.fromRunnable(() ->
-                        DEFAULT_LOGGER.info("[{}] {} is not reachable, trying another one.",
-                                this.getClass().getSimpleName(), botId)));
+                        LOGGER.info("{} is not reachable, trying another one: {}", botId, err.getMessage())));
     }
 
-    @Override
-    public Consumer<EmbedCreateSpec> getHelp(Context context) {
-        return CommandHelpBuilder.create(this, context)
-                .setDescription("Chat with an artificial intelligence.")
-                .addArg("message", String.format("must not exceed %d characters", MAX_CHARACTERS), false)
-                .setSource("""
-                        https://www.pandorabots.com/
-                        **Marvin** (ID: efc39100ce34d038)
-                        **Chomsky** (ID: b0dafd24ee35a477)
-                        **R.I.V.K.A** (ID: ea373c261e3458c6)
-                        **Lisa** (ID: b0a6a41a5e345c23)""")
-                .build();
-    }
 }
