@@ -1,31 +1,33 @@
 package com.shadorc.shadbot.command.gamestats;
 
 import com.shadorc.shadbot.api.json.gamestats.overwatch.OverwatchProfile;
+import com.shadorc.shadbot.api.json.gamestats.overwatch.profile.Competitive;
 import com.shadorc.shadbot.api.json.gamestats.overwatch.profile.ProfileResponse;
 import com.shadorc.shadbot.api.json.gamestats.overwatch.stats.StatsResponse;
 import com.shadorc.shadbot.command.CommandException;
+import com.shadorc.shadbot.core.cache.MultiValueCache;
 import com.shadorc.shadbot.core.command.BaseCmd;
 import com.shadorc.shadbot.core.command.CommandCategory;
 import com.shadorc.shadbot.core.command.Context;
+import com.shadorc.shadbot.data.Config;
 import com.shadorc.shadbot.object.Emoji;
 import com.shadorc.shadbot.object.RequestHelper;
-import com.shadorc.shadbot.object.help.CommandHelpBuilder;
-import com.shadorc.shadbot.object.message.UpdatableMessage;
-import com.shadorc.shadbot.utils.EnumUtils;
-import com.shadorc.shadbot.utils.FormatUtils;
-import com.shadorc.shadbot.utils.NetUtils;
-import com.shadorc.shadbot.utils.ShadbotUtils;
+import com.shadorc.shadbot.utils.DiscordUtil;
+import com.shadorc.shadbot.utils.NetUtil;
+import com.shadorc.shadbot.utils.ShadbotUtil;
 import discord4j.core.spec.EmbedCreateSpec;
+import discord4j.rest.util.ApplicationCommandOptionType;
 import reactor.core.publisher.Mono;
 import reactor.function.TupleUtils;
 
 import java.io.IOException;
-import java.util.List;
 import java.util.function.Consumer;
 
 public class OverwatchCmd extends BaseCmd {
 
     private static final String HOME_URL = "https://owapi.io";
+    private static final String PROFILE_API_URL = "%s/profile".formatted(HOME_URL);
+    private static final String STATS_API_URL = "%s/stats".formatted(HOME_URL);
 
     public enum Platform {
         PC("pc"),
@@ -44,84 +46,95 @@ public class OverwatchCmd extends BaseCmd {
         }
     }
 
+    private final MultiValueCache<String, OverwatchProfile> cachedValues;
+
     public OverwatchCmd() {
-        super(CommandCategory.GAMESTATS, List.of("overwatch"), "ow");
-        this.setDefaultRateLimiter();
+        super(CommandCategory.GAMESTATS, "overwatch", "Search for Overwatch statistics");
+        this.addOption("platform", "User's platform", true, ApplicationCommandOptionType.STRING,
+                DiscordUtil.toOptions(Platform.class));
+        this.addOption("battletag", "User's battletag, case sensitive", true,
+                ApplicationCommandOptionType.STRING);
+
+        this.cachedValues = MultiValueCache.Builder.<String, OverwatchProfile>create()
+                .withTtl(Config.CACHE_TTL)
+                .build();
     }
 
     @Override
-    public Mono<Void> execute(Context context) {
-        final List<String> args = context.requireArgs(2);
+    public Mono<?> execute(Context context) {
+        final Platform platform = context.getOptionAsEnum(Platform.class, "platform").orElseThrow();
+        final String battletag = context.getOptionAsString("battletag").orElseThrow();
 
-        final UpdatableMessage updatableMsg = new UpdatableMessage(context.getClient(), context.getChannelId());
-
-        final Platform platform = EnumUtils.parseEnum(Platform.class, args.get(0),
-                new CommandException(String.format("`%s` is not a valid Platform. %s",
-                        args.get(0), FormatUtils.options(Platform.class))));
-        final String battletag = args.get(1);
-
-        return updatableMsg.setContent(String.format(Emoji.HOURGLASS + " (**%s**) Loading Overwatch stats...", context.getUsername()))
-                .send()
-                .then(this.getOverwatchProfile(battletag, platform))
-                .map(profile -> {
-                    if (profile.getProfile().isPrivate()) {
-                        return updatableMsg.setContent(
-                                String.format(Emoji.ACCESS_DENIED + " (**%s**) This profile is private.",
-                                        context.getUsername()));
+        return context.reply(Emoji.HOURGLASS, context.localize("overwatch.loading"))
+                .then(this.getOverwatchProfile(context, battletag, platform))
+                .flatMap(profile -> {
+                    if (profile.profile().isPrivate()) {
+                        return context.editReply(Emoji.ACCESS_DENIED, context.localize("overwatch.private"));
                     }
-                    return updatableMsg.setEmbed(ShadbotUtils.getDefaultEmbed()
-                            .andThen(embed -> embed.setAuthor("Overwatch Stats (Quickplay)",
-                                    String.format("https://playoverwatch.com/en-gb/career/%s/%s",
-                                            platform.getName(), profile.getProfile().getUsername()), context.getAvatarUrl())
-                                    .setThumbnail(profile.getProfile().getPortrait())
-                                    .setDescription(String.format("Stats for user **%s**", profile.getProfile().getUsername()))
-                                    .addField("Level", profile.getProfile().getLevel(), true)
-                                    .addField("Time played", profile.getProfile().getQuickplayPlaytime(), true)
-                                    .addField("Games won", FormatUtils.number(profile.getProfile().getGames().getQuickplayWon()), true)
-                                    .addField("Competitive ranks", profile.getProfile().formatCompetitive(), true)
-                                    .addField("Top hero (Time played)", profile.getQuickplay().getPlayed(), true)
-                                    .addField("Top hero (Eliminations per life)",
-                                            profile.getQuickplay().getEliminationsPerLife(), true)));
-                })
-                .flatMap(UpdatableMessage::send)
-                .onErrorResume(err -> updatableMsg.deleteMessage().then(Mono.error(err)))
-                .then();
+                    return context.editReply(OverwatchCmd.formatEmbed(context, profile, platform));
+                });
     }
 
-    private Mono<OverwatchProfile> getOverwatchProfile(String battletag, Platform platform) {
-        final String username = NetUtils.encode(battletag.replace("#", "-"));
+    private static Consumer<EmbedCreateSpec> formatEmbed(Context context, OverwatchProfile overwatchProfile, Platform platform) {
+        final ProfileResponse profile = overwatchProfile.profile();
+        return ShadbotUtil.getDefaultEmbed(
+                embed -> embed.setAuthor(context.localize("overwatch.title"),
+                        "https://playoverwatch.com/en-gb/career/%s/%s"
+                                .formatted(platform.getName(), profile.username()),
+                        context.getAuthorAvatar())
+                        .setThumbnail(profile.portrait())
+                        .setDescription(context.localize("overwatch.description")
+                                .formatted(profile.username()))
+                        .addField(context.localize("overwatch.level"),
+                                Integer.toString(profile.level()), true)
+                        .addField(context.localize("overwatch.playtime"),
+                                profile.getQuickplayPlaytime(), true)
+                        .addField(context.localize("overwatch.games.won"),
+                                context.localize(profile.games().getQuickplayWon()), true)
+                        .addField(context.localize("overwatch.ranks"),
+                                OverwatchCmd.formatCompetitive(context, profile.competitive()), true)
+                        .addField(context.localize("overwatch.heroes.played"),
+                                overwatchProfile.getQuickplay().getPlayed(), true)
+                        .addField(context.localize("overwatch.heroes.ratio"),
+                                overwatchProfile.getQuickplay().getEliminationsPerLife(), true));
+    }
 
-        final Mono<ProfileResponse> getProfile =
-                RequestHelper.fromUrl(OverwatchCmd.getUrl("profile", platform, username))
-                        .to(ProfileResponse.class)
-                        .map(profile -> {
-                            if (profile.getMessage().map("Error: Profile not found"::equals).orElse(false)) {
-                                throw new CommandException("Profile not found. The specified platform may be incorrect.");
-                            }
-                            return profile;
-                        });
-        final Mono<StatsResponse> getStats =
-                RequestHelper.fromUrl(OverwatchCmd.getUrl("stats", platform, username))
-                        .to(StatsResponse.class);
+    private static String formatCompetitive(Context context, Competitive competitive) {
+        final StringBuilder strBuilder = new StringBuilder();
+        competitive.damage().rank()
+                .ifPresent(rank -> strBuilder.append(context.localize("overwatch.competitive.damage")
+                        .formatted(context.localize(rank))));
+        competitive.tank().rank()
+                .ifPresent(rank -> strBuilder.append(context.localize("overwatch.competitive.tank")
+                        .formatted(context.localize(rank))));
+        competitive.support().rank()
+                .ifPresent(rank -> strBuilder.append(context.localize("overwatch.competitive.support")
+                        .formatted(context.localize(rank))));
+        return strBuilder.isEmpty() ? context.localize("overwatch.not.ranked") : strBuilder.toString();
+    }
 
-        return Mono.zip(Mono.just(platform), getProfile, getStats)
-                .map(TupleUtils.function(OverwatchProfile::new))
-                .filter(overwatchProfile -> overwatchProfile.getProfile().getPortrait() != null)
+    private Mono<OverwatchProfile> getOverwatchProfile(Context context, String battletag, Platform platform) {
+        final String username = NetUtil.encode(battletag.replace("#", "-"));
+
+        final String profileUrl = OverwatchCmd.buildUrl(PROFILE_API_URL, platform, username);
+        final Mono<ProfileResponse> getProfile = RequestHelper.fromUrl(profileUrl)
+                .to(ProfileResponse.class)
+                .filter(profile -> !"Error: Profile not found".equals(profile.message().orElse("")))
+                .switchIfEmpty(Mono.error(new CommandException(context.localize("overwatch.not.found"))));
+
+        final String statsUrl = OverwatchCmd.buildUrl(STATS_API_URL, platform, username);
+        final Mono<StatsResponse> getStats = RequestHelper.fromUrl(statsUrl)
+                .to(StatsResponse.class);
+
+        return this.cachedValues
+                .getOrCache(profileUrl, Mono.zip(Mono.just(platform), getProfile, getStats)
+                        .map(TupleUtils.function(OverwatchProfile::new)))
+                .filter(overwatchProfile -> overwatchProfile.profile().portrait() != null)
                 .switchIfEmpty(Mono.error(new IOException("Overwatch API returned malformed JSON")));
     }
 
-    private static String getUrl(String endpoint, Platform platform, String username) {
-        return String.format("%s/%s/%s/global/%s", HOME_URL, endpoint, platform.getName(), username);
-    }
-
-    @Override
-    public Consumer<EmbedCreateSpec> getHelp(Context context) {
-        return CommandHelpBuilder.create(this, context)
-                .setDescription("Show player's stats for Overwatch.")
-                .addArg("platform", String.format("user's platform (%s)", FormatUtils.format(Platform.class, ", ")), false)
-                .addArg("username", "case sensitive", false)
-                .setExample(String.format("%s%s pc Shadorc#2503", context.getPrefix(), this.getName()))
-                .build();
+    private static String buildUrl(String url, Platform platform, String username) {
+        return "%s/%s/global/%s".formatted(url, platform.getName(), username);
     }
 
 }
