@@ -6,15 +6,14 @@ import com.shadorc.shadbot.api.json.image.r34.R34Response;
 import com.shadorc.shadbot.core.command.BaseCmd;
 import com.shadorc.shadbot.core.command.CommandCategory;
 import com.shadorc.shadbot.core.command.Context;
+import com.shadorc.shadbot.core.command.Setting;
 import com.shadorc.shadbot.object.Emoji;
 import com.shadorc.shadbot.object.RequestHelper;
-import com.shadorc.shadbot.object.help.CommandHelpBuilder;
-import com.shadorc.shadbot.object.message.UpdatableMessage;
-import com.shadorc.shadbot.utils.NetUtils;
-import com.shadorc.shadbot.utils.RandUtils;
-import com.shadorc.shadbot.utils.ShadbotUtils;
-import com.shadorc.shadbot.utils.StringUtils;
+import com.shadorc.shadbot.utils.NetUtil;
+import com.shadorc.shadbot.utils.RandUtil;
+import com.shadorc.shadbot.utils.ShadbotUtil;
 import discord4j.core.spec.EmbedCreateSpec;
+import discord4j.rest.util.ApplicationCommandOptionType;
 import reactor.core.publisher.Mono;
 
 import java.util.List;
@@ -23,86 +22,86 @@ import java.util.function.Consumer;
 public class Rule34Cmd extends BaseCmd {
 
     private static final String HOME_URL = "https://rule34.xxx/index.php";
-    private static final int MAX_TAGS_CHAR = 250;
+    private static final int MAX_TAGS_CHAR = 300;
 
     public Rule34Cmd() {
-        super(CommandCategory.IMAGE, List.of("rule34"), "r34");
-        this.setDefaultRateLimiter();
+        super(CommandCategory.IMAGE, "rule34", "Show random image from Rule34");
+        this.addOption("query", "Search for a Rule34 image", true, ApplicationCommandOptionType.STRING);
     }
 
     @Override
-    public Mono<Void> execute(Context context) {
-        final String arg = context.requireArg();
-        final UpdatableMessage updatableMsg = new UpdatableMessage(context.getClient(), context.getChannelId());
+    public Mono<?> execute(Context context) {
+        final String query = context.getOptionAsString("query").orElseThrow();
 
-        return updatableMsg.setContent(String.format(Emoji.HOURGLASS + " (**%s**) Loading rule34 image...", context.getUsername()))
-                .send()
-                .then(context.isChannelNsfw())
+        return context.isChannelNsfw()
                 .flatMap(isNsfw -> {
                     if (!isNsfw) {
-                        return Mono.just(updatableMsg.setContent(ShadbotUtils.mustBeNsfw(context.getPrefix())));
+                        return context.reply(Emoji.GREY_EXCLAMATION,
+                                context.localize("must.be.nsfw").formatted(Setting.NSFW));
                     }
 
-                    return Rule34Cmd.getR34Post(arg)
-                            .map(post -> {
-                                final List<String> tags = StringUtils.split(post.getTags(), " ");
-
+                    return context.reply(Emoji.HOURGLASS, context.localize("rule34.loading"))
+                            .then(Rule34Cmd.getR34Post(query))
+                            .flatMap(post -> {
                                 // Don't post images containing children
-                                if (post.hasChildren() || tags.stream().anyMatch(tag -> tag.contains("loli") || tag.contains("shota"))) {
-                                    return updatableMsg.setContent(
-                                            String.format(Emoji.WARNING + " (**%s**) I don't display images " +
-                                                            "containing children or tagged with `loli` or `shota`.",
-                                                    context.getUsername()));
+                                if (Rule34Cmd.containsChildren(post, post.getTags())) {
+                                    return context.editReply(Emoji.WARNING, context.localize("rule34.children"));
                                 }
 
-                                return updatableMsg.setEmbed(ShadbotUtils.getDefaultEmbed()
-                                        .andThen(embed -> {
-                                            post.getSource().ifPresent(source -> {
-                                                if (NetUtils.isUrl(source)) {
-                                                    embed.setDescription(String.format("%n[**Source**](%s)", source));
-                                                } else {
-                                                    embed.addField("Source", source, false);
-                                                }
-                                            });
-
-                                            final String resolution = String.format("%dx%d", post.getWidth(), post.getHeight());
-                                            final String formattedTags = Rule34Cmd.formatTags(tags);
-                                            embed.setAuthor(String.format("Rule34: %s", arg), post.getFileUrl(), context.getAvatarUrl())
-                                                    .setThumbnail("https://i.imgur.com/t6JJWFN.png")
-                                                    .addField("Resolution", resolution, false)
-                                                    .addField("Tags", formattedTags, false)
-                                                    .setImage(post.getFileUrl())
-                                                    .setFooter("If there is no preview, click on the title to " +
-                                                            "see the media (probably a video)", null);
-                                        }));
-                            });
-                })
-                .switchIfEmpty(Mono.fromCallable(() -> updatableMsg.setContent(
-                        String.format(Emoji.MAGNIFYING_GLASS + " (**%s**) No images were found for the search `%s`",
-                                context.getUsername(), arg))))
-                .flatMap(UpdatableMessage::send)
-                .onErrorResume(err -> updatableMsg.deleteMessage().then(Mono.error(err)))
-                .then();
+                                return context.editReply(Rule34Cmd.formatEmbed(context, post, query));
+                            })
+                            .switchIfEmpty(context.editReply(Emoji.MAGNIFYING_GLASS,
+                                    context.localize("rule34.not.found").formatted(query)));
+                });
     }
 
-    private static Mono<R34Post> getR34Post(String search) {
-        final String url = String.format("%s?page=dapi&s=post&q=index&tags=%s",
-                HOME_URL, NetUtils.encode(search.replace(" ", "_")));
+    private static Mono<R34Post> getR34Post(String tag) {
+        final String url = "%s?".formatted(HOME_URL)
+                + "page=dapi"
+                + "&s=post"
+                + "&q=index"
+                + "&tags=%s".formatted(NetUtil.encode(tag.replace(" ", "_")));
 
         return RequestHelper.fromUrl(url)
                 .to(R34Response.class)
-                .map(R34Response::getPosts)
+                .map(R34Response::posts)
                 .flatMap(Mono::justOrEmpty)
-                .map(R34Posts::getPosts)
+                .map(R34Posts::post)
                 .flatMap(Mono::justOrEmpty)
-                .map(RandUtils::randValue);
+                .map(RandUtil::randValue);
     }
 
-    private static String formatTags(List<String> tags) {
+    private static boolean containsChildren(R34Post post, List<String> tags) {
+        return post.hasChildren() || tags.stream().anyMatch(tag -> tag.contains("loli") || tag.contains("shota"));
+    }
+
+    private static Consumer<EmbedCreateSpec> formatEmbed(Context context, R34Post post, String tag) {
+        return ShadbotUtil.getDefaultEmbed(
+                embed -> {
+                    post.getSource().ifPresent(source -> {
+                        if (NetUtil.isUrl(source)) {
+                            embed.setDescription(context.localize("rule34.source.url").formatted(source));
+                        } else {
+                            embed.addField(context.localize("rule34.source"), source, false);
+                        }
+                    });
+
+                    final String resolution = "%dx%d".formatted(post.width(), post.height());
+                    final String formattedTags = Rule34Cmd.formatTags(post.getTags());
+                    embed.setAuthor(context.localize("rule34.title").formatted(tag), post.fileUrl(), context.getAuthorAvatar())
+                            .setThumbnail("https://i.imgur.com/t6JJWFN.png")
+                            .addField(context.localize("rule34.resolution"), resolution, false)
+                            .addField(context.localize("rule34.tags"), formattedTags, false)
+                            .setImage(post.fileUrl())
+                            .setFooter(context.localize("rule34.footer"), null);
+                });
+    }
+
+    private static String formatTags(final List<String> tags) {
         final StringBuilder tagsBuilder = new StringBuilder();
         for (final String tag : tags) {
             if (tagsBuilder.length() + tag.length() < MAX_TAGS_CHAR) {
-                tagsBuilder.append(String.format("`%s` ", tag));
+                tagsBuilder.append("`%s` ".formatted(tag));
             } else {
                 tagsBuilder.append("...");
                 break;
@@ -111,12 +110,4 @@ public class Rule34Cmd extends BaseCmd {
         return tagsBuilder.toString();
     }
 
-    @Override
-    public Consumer<EmbedCreateSpec> getHelp(Context context) {
-        return CommandHelpBuilder.create(this, context)
-                .setDescription("Show a random image corresponding to a tag from Rule34 website.")
-                .setSource("https://www.rule34.xxx/")
-                .addArg("tag", false)
-                .build();
-    }
 }
