@@ -1,11 +1,14 @@
 package com.shadorc.shadbot.data;
 
-import com.shadorc.shadbot.utils.RandUtils;
+import com.shadorc.shadbot.utils.RandUtil;
 
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Objects;
 
 import static com.shadorc.shadbot.Shadbot.DEFAULT_LOGGER;
 
@@ -22,24 +25,19 @@ public class TextFile {
                 final String content = Files.readString(file.toPath()).replace("\r\n", "\n");
                 this.lines.addAll(Arrays.asList(content.split("\n")));
             } catch (final IOException err) {
-                DEFAULT_LOGGER.error(String.format("An error occurred while reading text file: %s", file.getPath()), err);
+                DEFAULT_LOGGER.error("An error occurred while reading text file: %s".formatted(file.getPath()), err);
             }
         } else {
-            DEFAULT_LOGGER.error("An error occurred while reading {}, this text file does not exist", file.getPath());
+            DEFAULT_LOGGER.error("Text file {} not found", file.getPath());
         }
     }
 
-    public List<String> getLines() {
-        return Collections.unmodifiableList(this.lines);
-    }
-
     public String getRandomLine() {
-        return Objects.requireNonNull(RandUtils.randValue(this.lines));
+        return Objects.requireNonNull(RandUtil.randValue(this.lines));
     }
 
     public String getRandomLineFormatted() {
-        return Objects.requireNonNull(RandUtils.randValue(this.lines))
-                .replace("{default_prefix}", Config.DEFAULT_PREFIX)
+        return Objects.requireNonNull(RandUtil.randValue(this.lines))
                 .replace("{patreon_url}", Config.PATREON_URL)
                 .replace("{support_server_url}", Config.SUPPORT_SERVER_URL);
     }
