@@ -1,6 +1,6 @@
 package com.shadorc.shadbot.data.credential;
 
-import com.shadorc.shadbot.utils.LogUtils;
+import com.shadorc.shadbot.utils.LogUtil;
 import reactor.util.Logger;
 import reactor.util.annotation.Nullable;
 
@@ -8,53 +8,44 @@ import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
+import java.util.Objects;
 import java.util.Properties;
 
 public class CredentialManager {
 
-    private static final Logger LOGGER = LogUtils.getLogger(CredentialManager.class);
+    private static final Logger LOGGER = LogUtil.getLogger(CredentialManager.class);
 
-    private static CredentialManager instance;
+    private static final Properties PROPERTIES;
 
     static {
-        CredentialManager.instance = new CredentialManager();
-    }
-
-    private final Properties properties;
-
-    private CredentialManager() {
         final File file = new File("credentials.properties");
         if (!file.exists()) {
-            throw new RuntimeException(String.format("%s file is missing.", file.getName()));
+            throw new RuntimeException("%s file is missing.".formatted(file.getName()));
         }
 
-        this.properties = new Properties();
+        PROPERTIES = new Properties();
         try (final BufferedReader reader = Files.newBufferedReader(file.toPath())) {
-            this.properties.load(reader);
+            CredentialManager.PROPERTIES.load(reader);
         } catch (final IOException err) {
-            throw new RuntimeException(String.format("An error occurred while loading %s file.", file.getName()));
+            throw new RuntimeException("An error occurred while loading %s file.".formatted(file.getName()));
         }
 
         // Check if all API keys are present
         for (final Credential credential : Credential.values()) {
-            if (this.get(credential) == null) {
-                LOGGER.warn("Credential {} not found, the associated command/service may not work properly",
-                        credential);
+            if (CredentialManager.get(credential) == null) {
+                LOGGER.warn("Credential {} not found, the associated command/service may not work properly", credential);
             }
         }
     }
 
     @Nullable
-    public String get(Credential key) {
-        final String property = this.properties.getProperty(key.toString());
+    public static String get(Credential key) {
+        Objects.requireNonNull(key);
+        final String property = PROPERTIES.getProperty(key.toString());
         if (property == null || property.isBlank()) {
             return null;
         }
         return property;
-    }
-
-    public static CredentialManager getInstance() {
-        return CredentialManager.instance;
     }
 
 }
