@@ -5,29 +5,30 @@ import com.sedmelluq.discord.lavaplayer.tools.FriendlyException;
 import com.sedmelluq.discord.lavaplayer.track.AudioPlaylist;
 import com.sedmelluq.discord.lavaplayer.track.AudioTrack;
 import com.sedmelluq.discord.lavaplayer.track.AudioTrackInfo;
+import com.shadorc.shadbot.core.command.InteractionContext;
+import com.shadorc.shadbot.core.i18n.I18nManager;
 import com.shadorc.shadbot.data.Config;
-import com.shadorc.shadbot.db.DatabaseManager;
-import com.shadorc.shadbot.db.guilds.entity.DBGuild;
-import com.shadorc.shadbot.db.guilds.entity.Settings;
-import com.shadorc.shadbot.music.GuildMusic;
+import com.shadorc.shadbot.database.DatabaseManager;
 import com.shadorc.shadbot.music.MusicManager;
 import com.shadorc.shadbot.music.TrackScheduler;
 import com.shadorc.shadbot.object.Emoji;
 import com.shadorc.shadbot.object.ExceptionHandler;
-import com.shadorc.shadbot.utils.DiscordUtils;
-import com.shadorc.shadbot.utils.FormatUtils;
-import com.shadorc.shadbot.utils.ShadbotUtils;
-import com.shadorc.shadbot.utils.StringUtils;
+import com.shadorc.shadbot.utils.FormatUtil;
+import com.shadorc.shadbot.utils.ShadbotUtil;
+import com.shadorc.shadbot.utils.StringUtil;
 import discord4j.common.util.Snowflake;
 import discord4j.core.object.entity.User;
 import discord4j.core.spec.EmbedCreateSpec;
+import discord4j.voice.VoiceConnection;
 import reactor.core.publisher.Mono;
+import reactor.core.scheduler.Scheduler;
 import reactor.core.scheduler.Schedulers;
 import reactor.function.TupleUtils;
 
 import java.time.Duration;
 import java.util.Collections;
 import java.util.List;
+import java.util.Locale;
 import java.util.function.Consumer;
 
 import static com.shadorc.shadbot.music.MusicManager.LOGGER;
@@ -37,8 +38,11 @@ public class AudioLoadResultListener implements AudioLoadResultHandler {
     public static final String YT_SEARCH = "ytsearch: ";
     public static final String SC_SEARCH = "scsearch: ";
 
+    private static final Scheduler DEFAULT_SCHEDULER = Schedulers.boundedElastic();
     private static final int MAX_PLAYLIST_NAME_LENGTH = 70;
 
+    private final InteractionContext interaction;
+    private final Locale locale;
     private final Snowflake guildId;
     private final Snowflake djId;
     private final String identifier;
@@ -46,7 +50,10 @@ public class AudioLoadResultListener implements AudioLoadResultHandler {
 
     private List<AudioTrack> resultTracks;
 
-    public AudioLoadResultListener(Snowflake guildId, Snowflake djId, String identifier, boolean insertFirst) {
+    public AudioLoadResultListener(InteractionContext interaction, Locale locale, Snowflake guildId, Snowflake djId,
+                                   String identifier, boolean insertFirst) {
+        this.interaction = interaction;
+        this.locale = locale;
         this.guildId = guildId;
         this.djId = djId;
         this.identifier = identifier;
@@ -55,15 +62,14 @@ public class AudioLoadResultListener implements AudioLoadResultHandler {
 
     @Override
     public void trackLoaded(AudioTrack audioTrack) {
-        LOGGER.debug("{Guild ID: {}} Track loaded: {}", this.guildId.asLong(), audioTrack.hashCode());
-        Mono.justOrEmpty(MusicManager.getInstance().getGuildMusic(this.guildId))
+        LOGGER.debug("{Guild ID: {}} Track loaded: {}", this.guildId.asString(), audioTrack.hashCode());
+        Mono.justOrEmpty(MusicManager.getGuildMusic(this.guildId))
                 .filter(guildMusic -> !guildMusic.getTrackScheduler().startOrQueue(audioTrack, this.insertFirst))
-                .flatMap(GuildMusic::getMessageChannel)
-                .flatMap(channel -> DiscordUtils.sendMessage(String.format(
-                        Emoji.MUSICAL_NOTE + " **%s** has been added to the playlist.",
-                        FormatUtils.trackName(audioTrack.getInfo())), channel))
+                .flatMap(guildMusic -> this.interaction.reply(Emoji.MUSICAL_NOTE,
+                        I18nManager.localize(this.locale, "audioresult.track.loaded")
+                                .formatted(FormatUtil.trackName(this.locale, audioTrack.getInfo()))))
                 .then(this.terminate())
-                .subscribeOn(Schedulers.boundedElastic())
+                .subscribeOn(DEFAULT_SCHEDULER)
                 .subscribe(null, ExceptionHandler::handleUnknownError);
     }
 
@@ -71,28 +77,29 @@ public class AudioLoadResultListener implements AudioLoadResultHandler {
     public void playlistLoaded(AudioPlaylist audioPlaylist) {
         // SoundCloud returns an empty playlist when no results where found
         if (audioPlaylist.getTracks().isEmpty()) {
-            LOGGER.debug("{Guild ID: {}} Empty playlist: {}", this.guildId.asLong(), audioPlaylist.hashCode());
+            LOGGER.debug("{Guild ID: {}} Empty playlist: {}", this.guildId.asString(), audioPlaylist.hashCode());
             this.onNoMatches();
         }
         // If a track is specifically selected
+        // TODO Question: Do we want to load only one track?
         else if (audioPlaylist.getSelectedTrack() != null) {
-            LOGGER.debug("{Guild ID: {}} Playlist loaded, track selected: {}", this.guildId.asLong(), audioPlaylist.hashCode());
+            LOGGER.debug("{Guild ID: {}} Playlist loaded, track selected: {}", this.guildId.asString(), audioPlaylist.hashCode());
             this.trackLoaded(audioPlaylist.getSelectedTrack());
         }
         // The user is searching something
         else if (audioPlaylist.isSearchResult()) {
-            LOGGER.debug("{Guild ID: {}} Playlist loaded, search results: {}", this.guildId.asLong(), audioPlaylist.hashCode());
+            LOGGER.debug("{Guild ID: {}} Playlist loaded, search results: {}", this.guildId.asString(), audioPlaylist.hashCode());
             this.onSearchResult(audioPlaylist);
         }
         // The user loads a full playlist
         else {
-            LOGGER.debug("{Guild ID: {}} Playlist loaded, full playlist: {}", this.guildId.asLong(), audioPlaylist.hashCode());
+            LOGGER.debug("{Guild ID: {}} Playlist loaded, full playlist: {}", this.guildId.asString(), audioPlaylist.hashCode());
             this.onPlaylistLoaded(audioPlaylist);
         }
     }
 
     private void onSearchResult(AudioPlaylist playlist) {
-        Mono.justOrEmpty(MusicManager.getInstance().getGuildMusic(this.guildId))
+        Mono.justOrEmpty(MusicManager.getGuildMusic(this.guildId))
                 .flatMapMany(guildMusic -> {
                     this.resultTracks = playlist.getTracks()
                             .subList(0, Math.min(Config.MUSIC_SEARCHES, playlist.getTracks().size()));
@@ -100,27 +107,27 @@ public class AudioLoadResultListener implements AudioLoadResultHandler {
                     guildMusic.setDjId(this.djId);
                     guildMusic.setWaitingForChoice(true);
 
-                    return guildMusic.getGateway()
-                            .getUserById(guildMusic.getDjId())
+                    return guildMusic.getDj()
                             .map(User::getAvatarUrl)
-                            .flatMap(avatarUrl -> this.getPlaylistEmbed(playlist, avatarUrl))
-                            .flatMap(embed -> guildMusic.getMessageChannel()
-                                    .flatMap(channel -> DiscordUtils.sendMessage(embed, channel)))
-                            .flatMapMany(ignored ->
-                                    AudioLoadResultInputs.create(guildMusic.getGateway(), Duration.ofSeconds(30),
+                            .map(avatarUrl -> this.formatResultsEmbed(playlist, avatarUrl, this.locale))
+                            .flatMap(this.interaction::reply)
+                            .flatMapMany(__ ->
+                                    // TODO Clean-up: This looks bad
+                                    AudioLoadResultMessageInputs.create(guildMusic.getGateway(), Duration.ofSeconds(30),
                                             guildMusic.getMessageChannelId(), this)
                                             .waitForInputs()
                                             .then(Mono.fromRunnable(() -> guildMusic.setWaitingForChoice(false))));
                 })
                 .then(this.terminate())
-                .subscribeOn(Schedulers.boundedElastic())
+                .subscribeOn(DEFAULT_SCHEDULER)
                 .subscribe(null, ExceptionHandler::handleUnknownError);
     }
 
     private void onPlaylistLoaded(AudioPlaylist playlist) {
-        Mono.justOrEmpty(MusicManager.getInstance().getGuildMusic(this.guildId))
-                .zipWith(DatabaseManager.getPremium().isPremium(this.guildId, this.djId))
-                .flatMap(TupleUtils.function((guildMusic, isPremium) -> {
+        Mono.zip(
+                Mono.justOrEmpty(MusicManager.getGuildMusic(this.guildId)),
+                DatabaseManager.getPremium().isPremium(this.guildId, this.djId))
+                .map(TupleUtils.function((guildMusic, isPremium) -> {
                     final TrackScheduler trackScheduler = guildMusic.getTrackScheduler();
                     final StringBuilder strBuilder = new StringBuilder();
 
@@ -130,83 +137,93 @@ public class AudioLoadResultListener implements AudioLoadResultHandler {
                         musicsAdded++;
                         // The playlist limit is reached and the user / guild is not premium
                         if (trackScheduler.getPlaylist().size() >= Config.PLAYLIST_SIZE - 1 && !isPremium) {
-                            strBuilder.append(ShadbotUtils.PLAYLIST_LIMIT_REACHED + "\n");
+                            strBuilder.append(Emoji.LOCK)
+                                    .append(' ')
+                                    .append(I18nManager.localize(this.locale, "playlist.limit.reached")
+                                            .formatted(Config.PLAYLIST_SIZE, Config.PATREON_URL))
+                                    .append('\n');
                             break;
                         }
                     }
 
-                    strBuilder.append(String.format(Emoji.MUSICAL_NOTE + " %d musics have been added to the playlist.", musicsAdded));
-                    return guildMusic.getMessageChannel()
-                            .flatMap(channel -> DiscordUtils.sendMessage(strBuilder.toString(), channel));
+                    return strBuilder.append(Emoji.MUSICAL_NOTE)
+                            .append(' ')
+                            .append(I18nManager.localize(this.locale, "audioresult.playlist.loaded")
+                                    .formatted(musicsAdded))
+                            .toString();
                 }))
+                .flatMap(this.interaction::reply)
                 .then(this.terminate())
-                .subscribeOn(Schedulers.boundedElastic())
+                .subscribeOn(DEFAULT_SCHEDULER)
                 .subscribe(null, ExceptionHandler::handleUnknownError);
     }
 
-    private Mono<Consumer<EmbedCreateSpec>> getPlaylistEmbed(AudioPlaylist playlist, String avatarUrl) {
-        final String choices = FormatUtils.numberedList(Config.MUSIC_SEARCHES, playlist.getTracks().size(),
+    private Consumer<EmbedCreateSpec> formatResultsEmbed(AudioPlaylist playlist, String avatarUrl, Locale locale) {
+        final String choices = FormatUtil.numberedList(Config.MUSIC_SEARCHES, playlist.getTracks().size(),
                 count -> {
                     final AudioTrackInfo info = playlist.getTracks().get(count - 1).getInfo();
-                    return String.format("\t**%d.** [%s](%s)", count, FormatUtils.trackName(info), info.uri);
+                    return "\t**%d.** [%s](%s)".formatted(count, FormatUtil.trackName(this.locale, info), info.uri);
                 });
 
-        final String playlistName = StringUtils.abbreviate(playlist.getName(), MAX_PLAYLIST_NAME_LENGTH);
-        return DatabaseManager.getGuilds()
-                .getDBGuild(this.guildId)
-                .map(DBGuild::getSettings)
-                .map(Settings::getPrefix)
-                .map(prefix -> ShadbotUtils.getDefaultEmbed()
-                        .andThen(embed -> embed.setAuthor(playlistName, null, avatarUrl)
-                                .setThumbnail("https://i.imgur.com/IG3Hj2W.png")
-                                .setDescription("**Select a music by typing the corresponding number.**"
-                                        + "\nYou can choose several musics by separating them with a comma."
-                                        + "\nExample: 1,3,4"
-                                        + "\n\n" + choices)
-                                .setFooter(String.format("Use %scancel to cancel the selection (Automatically " +
-                                        "canceled in %ds).", prefix, Config.MUSIC_CHOICE_DURATION), null)));
+        final String search = playlist.getName().split(":")[1].trim();
+        final String abbrSearch = StringUtil.abbreviate(search, MAX_PLAYLIST_NAME_LENGTH);
+        return ShadbotUtil.getDefaultEmbed(
+                embed -> embed.setAuthor(I18nManager.localize(locale, "audioresult.playlist.name").formatted(abbrSearch),
+                        null, avatarUrl)
+                        .setThumbnail("https://i.imgur.com/IG3Hj2W.png")
+                        .setDescription(I18nManager.localize(locale, "audioresult.embed.description").formatted(choices))
+                        .setFooter(I18nManager.localize(locale, "audioresult.embed.footer")
+                                .formatted(Config.MUSIC_CHOICE_DURATION), null));
     }
 
     @Override
     public void loadFailed(FriendlyException err) {
-        LOGGER.debug("{Guild ID: {}} Load failed: {}", this.guildId.asLong(), err);
-        Mono.justOrEmpty(MusicManager.getInstance().getGuildMusic(this.guildId))
-                .flatMap(guildMusic -> {
-                    final String errMessage = ShadbotUtils.cleanLavaplayerErr(err);
-                    LOGGER.info("{Guild ID: {}} Load failed: {}", this.guildId.asLong(), errMessage);
-                    return guildMusic.getMessageChannel()
-                            .flatMap(channel -> DiscordUtils.sendMessage(
-                                    String.format(Emoji.RED_CROSS + " Something went wrong while loading the track: %s",
-                                            errMessage.toLowerCase()), channel));
-                })
+        LOGGER.debug("{Guild ID: {}} Load failed: {}", this.guildId.asString(), err);
+        final String errMessage = ShadbotUtil.cleanLavaplayerErr(err).toLowerCase();
+        LOGGER.info("{Guild ID: {}} Load failed: {}", this.guildId.asString(), errMessage);
+        this.interaction.reply(Emoji.RED_CROSS,
+                I18nManager.localize(this.locale, "audioresult.load.failed")
+                        .formatted(errMessage))
                 .then(this.terminate())
-                .subscribeOn(Schedulers.boundedElastic())
+                .subscribeOn(DEFAULT_SCHEDULER)
                 .subscribe(null, ExceptionHandler::handleUnknownError);
     }
 
     @Override
     public void noMatches() {
-        LOGGER.debug("{Guild ID: {}} No matches for identifier: {}", this.guildId.asLong(), this.identifier);
+        LOGGER.debug("{Guild ID: {}} No matches for identifier: {}", this.guildId.asString(), this.identifier);
         this.onNoMatches();
     }
 
     private void onNoMatches() {
-        Mono.justOrEmpty(MusicManager.getInstance().getGuildMusic(this.guildId))
-                .flatMap(GuildMusic::getMessageChannel)
-                .flatMap(channel -> DiscordUtils.sendMessage(String.format(Emoji.MAGNIFYING_GLASS + " No results for `%s`.",
-                        StringUtils.remove(this.identifier, YT_SEARCH, SC_SEARCH)), channel))
+        this.interaction.reply(Emoji.MAGNIFYING_GLASS,
+                I18nManager.localize(this.locale, "audioresult.no.matches")
+                        .formatted(StringUtil.remove(this.identifier, YT_SEARCH, SC_SEARCH)))
                 .then(this.terminate())
-                .subscribeOn(Schedulers.boundedElastic())
+                .subscribeOn(DEFAULT_SCHEDULER)
                 .subscribe(null, ExceptionHandler::handleUnknownError);
     }
 
     private Mono<Void> terminate() {
-        return Mono.justOrEmpty(MusicManager.getInstance().getGuildMusic(this.guildId))
-                .flatMap(guildMusic -> guildMusic.removeAudioLoadResultListener(this));
+        return Mono.justOrEmpty(MusicManager.getGuildMusic(this.guildId))
+                .flatMap(guildMusic -> {
+                    guildMusic.removeAudioLoadResultListener(this);
+                    // If there is no music playing and nothing is loading, leave the voice channel
+                    if (guildMusic.getTrackScheduler().isStopped() && !guildMusic.isWaitingForListeners()) {
+                        return guildMusic.getGateway().getVoiceConnectionRegistry()
+                                .getVoiceConnection(this.getGuildId())
+                                .flatMap(VoiceConnection::disconnect);
+                    }
+                    return Mono.empty();
+                });
     }
 
     public Snowflake getGuildId() {
         return this.guildId;
+    }
+
+    public String getIdentifier() {
+        return this.identifier;
     }
 
     public List<AudioTrack> getResultTracks() {
